--- a/model_analysis_v4_demo.Rmd
+++ b/model_analysis_v4_demo.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "ACT-R model fitting and outcome analysis"
+title: "Capturing Individual differences in learning"
 author: "Theodros H."
-date: "10/2020"
+date: "10/2021"
 output:
-  pdf_document:
-    fig_width: 5
-    fig_height: 4
-    toc: yes
   html_document:
     code_folding: hide
     toc: yes
     toc_float: yes
+  pdf_document:
+    fig_width: 5
+    fig_height: 4
+    toc: yes
 editor_options:
   chunk_output_type: console
 ---
@@ -116,7 +116,7 @@ sdat.mod  <- cbind(sdat[, 1:24],
 
  
  #--------- Integrated model RL to LTM pipe
-simsRL_LTMpipe <- fromJSON('./simulated_data/pipe_model/pipe_all_data_5params_071320.JSON')
+simsRL_LTMpipe <- fromJSON('./simulated_data/pipe_model/sim_data_072020/pipe_all_data_5params_071320.JSON')
 
  simsRL_LTMpipe.set3learn <- simsRL_LTMpipe$data$set3_learn %>%
   unlist() %>%
@@ -148,7 +148,7 @@ simsRL_LTMpipe.s3s6test.temp <-
  
  
  #--------- Integrated model assigned strategy
-simsRL_LTMstr <- fromJSON('./simulated_data/strategy_model/strategy_all_data_5params_071320.JSON')
+simsRL_LTMstr <- fromJSON('./simulated_data/strategy_model/sim_data_072020/strategy_all_data_5params_071320.JSON')
 
  simsRL_LTMstr.set3learn <- simsRL_LTMstr$data$set3_learn %>%
   unlist() %>%
@@ -181,7 +181,7 @@ simsRL_LTMstr.s3s6test.temp <-
 
 #--------- Reinforcement Learning Model
 
-simsRL <- fromJSON('./simulated_data/RL_model/RL_all_data_5params_071329.JSON')
+simsRL <- fromJSON('./simulated_data/RL_model/sim_data_072020/RL_all_data_5params_071329.JSON')
 
  simsRL.set3learn <- simsRL$data$set3_learn %>%
   unlist() %>%
@@ -215,7 +215,7 @@ simsRL.set6learn <- simsRL$data$set6_learn %>%
 
 #--------- Longterm Memory/WM/Declarative model 
  
-simsLTM    <- fromJSON('./simulated_data/LTM_model/LTM_all_data_5params_071320.JSON')
+simsLTM    <- fromJSON('./simulated_data/LTM_model/sim_data_072020/LTM_all_data_5params_071320.JSON')
 
  simsLTM.set3learn <- simsLTM$data$set3_learn %>%
   unlist() %>%
@@ -688,7 +688,7 @@ facet_wrap(vars(model)) +
 
 melted.p.behav.model %>% 
    filter(iteration != 13) %>% 
-  summarySE( measurevar = "accuracy", groupvars = c("iteration", "set Size")) %>% 
+  summarySE( measurevar = "accuracy", groupvars = c("iteration", "setSize")) %>% 
   ggplot(aes( as.factor(iteration), accuracy, color=setSize, group=setSize)) +
   geom_point() +
   geom_line(size=1) +
